test/good/function_call.lat
int main() {
    printInt(one());
    printInt(add(1, 2));
    printInt(factorial(3) - 1);
    return_void_before_print();
    return 0;
}

int one() {
    return 1;
}

int add(int a, int b) {
    return a + b;
}

int factorial(int n) {
    if (n == 0) {
        return 1;
    }
    return n * factorial(n-1);
}

void return_void_before_print() {
    printInt(9);
    return;
    printInt(0);
}
