test/bad/int_str_assignment.lat
int main() {
	int n = 1;
	string str = "asdf";
	n = str;
}
